# airflow-pipelines

./: .airflowignore  .gitignore  AGENTS.md  Dockerfile  README.md  pylock.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
dags/: fitbit_to_influxdb.py
tests/: test_fitbit_oauth.py  test_fitbit_to_influxdb.py
