[project]
name = "airflow-pipelines"
version = "0.1.0"
description = "A collection of Apache Airflow DAGs."
requires-python = ">=3.11"
dependencies = [
    "apache-airflow",
    "apache-airflow-providers-influxdb",
    "pendulum",
    "requests",
]

[dependency-groups]
dev = ["pytest", "pytest-mock"]

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = [
    "ignore:datetime.datetime.utcnow() is deprecated:DeprecationWarning",
]
