[project]
name = "airflow-pipelines"
version = "0.1.0"
description = "A collection of Apache Airflow DAGs."
requires-python = ">=3.11"
dependencies = [
    "apache-airflow",
    "apache-airflow-providers-influxdb",
    "pendulum",
    "httpx",
]

[dependency-groups]
dev = ["pytest", "pytest-mock"]

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = ["ignore::DeprecationWarning:reactivex"]
